# ai-info-radar

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.scratch/ai-alert-system/: PRD.md
configs/: focus.example.yaml  rules.default.json  scoring.example.yaml  sources.agents-radar.fixture.json  sources.anthropic-status.fixture.json  sources.anthropic.fixture.json  sources.claude-code.fixture.json  sources.example.yaml  sources.google-ai-blog.fixture.json  sources.leads.yaml  sources.live-test.json  sources.local.yaml  sources.official.json  sources.openai-pricing.fixture.json  sources.primary.yaml  sources.qwen-blog.fixture.json
data/: sample_items.json
docs/: architecture.md  positioning.md  product-brief.md  scoring-model.md  source-strategy.md
docs/agents/: domain.md  issue-tracker.md
docs/launchd/: com.abi.ai-info-radar.digest.plist.example  com.abi.ai-info-radar.poll.plist.example
docs/operations/: launchd-deployment.md
labs/: README.md
prompts/: daily-radar.md  source-verification.md  weekly-learning-map.md
src/: README.md
src/ai_info_radar/: __init__.py  alerts.py  (+18 more)
tests/: gen_digest_0531.py  test_issue01_anthropic_poll.py  test_issue02_claude_code_changelog.py  test_issue03_feishu_alert.py  test_issue04_morning_digest.py  test_issue05_aggregator_candidate.py  test_issue06_event_merge_cooldown.py  test_issue07_status_incidents.py  test_issue08_pricing_model_deprecation.py  test_issue09_official_source_manifest.py  test_issue10_item_state_cli.py  test_issue11_rules_cli.py  test_issue12_launchd_docs.py  test_issue13_rss_feed.py  test_pipeline.py
(+26 files in other folders)
